Working on the JS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <title>DOMination</title>
 </head>
 <body>
-    
+    <main>
+
+        <div class="quiz">
+            <h1>JavaScript Fundamentals Quiz</h1>
+            <div id="question-container"></div>
+            <div id="options-container"></div>
+            <button id="next-button">Next Question</button>
+
+        </div>
+
+        <div id="score-container" class="hidden">
+            <h2>Your Score:</h2>
+            <p id="score"></p>
+            <button id="restart-button">Restart Quiz</button>
+        </div>
+
+
+    </main>
+    <footer>
+
+
+
+    </footer>
     <script src="./scripts/script.js"></script>
 </body>
 </html>
